--- a/config/zones/AR.yaml
+++ b/config/zones/AR.yaml
@@ -340,6 +340,10 @@ isLowCarbon:
       value: 0.2992
     - datetime: '2022-01-01'
       value: 1.0
+    - datetime: '2023-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
@@ -347,6 +351,10 @@ isRenewable:
     - datetime: '2021-01-01'
       value: 0.2268
     - datetime: '2022-01-01'
+      value: 1.0
+    - datetime: '2023-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
       value: 1.0
 parsers:
   production: CAMMESA.fetch_production
