--- a/config/zones/JP-HR.yaml
+++ b/config/zones/JP-HR.yaml
@@ -161,9 +161,13 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
+    - datetime: '2025-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
       value: 1.0
 parsers:
   consumptionForecast: JP.fetch_consumption_forecast
