--- a/config/zones/JP-KN.yaml
+++ b/config/zones/JP-KN.yaml
@@ -197,11 +197,15 @@ isLowCarbon:
       value: 1.0
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2023-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
+      value: 1.0
+    - datetime: '2023-01-01'
       value: 1.0
 parsers:
   consumptionForecast: JP.fetch_consumption_forecast
