--- a/config/zones/JP-KY.yaml
+++ b/config/zones/JP-KY.yaml
@@ -163,8 +163,20 @@ fallbackZoneMixes:
         solar: 0.1382906879744919
         unknown: 1.0724997702627927e-06
         wind: 0.006801352931139955
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2023-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
+      value: 1.0
+isRenewable:
+  hydro discharge:
+    - datetime: '2023-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
+      value: 1.0
 parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   generationForecast: JP.fetch_generation_forecast
@@ -177,4 +189,4 @@ sources:
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
 timezone: Asia/Tokyo
-zone_name: 'Kyūshū'
+zone_name: "Ky\u016Bsh\u016B"
