--- a/config/zones/AT.yaml
+++ b/config/zones/AT.yaml
@@ -275,15 +275,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 113.25
+        value: 109.66
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 77.83
+        value: 77.02
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 109.4
+        value: 108.31
     oil:
       - datetime: '2021-01-01'
         source: EU-ETS, ENTSO-E 2021
@@ -344,15 +344,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; UNECE 2022
-        value: 123.95
+        value: 120.36
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
-        value: 88.53
+        value: 87.72
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
-        value: 120.1
+        value: 119.01
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -541,6 +541,12 @@ isLowCarbon:
       value: 0.7329
     - datetime: '2022-01-01'
       value: 0.7323
+    - datetime: '2023-01-01'
+      value: 0.8431
+    - datetime: '2024-01-01'
+      value: 0.8784
+    - datetime: '2025-01-01'
+      value: 0.8312
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
@@ -549,6 +555,12 @@ isRenewable:
       value: 0.6466
     - datetime: '2022-01-01'
       value: 0.6487
+    - datetime: '2023-01-01'
+      value: 0.7817
+    - datetime: '2024-01-01'
+      value: 0.8394
+    - datetime: '2025-01-01'
+      value: 0.7742
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
