--- a/config/zones/AU-TAS-KI.yaml
+++ b/config/zones/AU-TAS-KI.yaml
@@ -51,7 +51,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 291.22
+        value: 291.23
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
@@ -77,7 +77,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 324.22
+        value: 324.23
 fallbackZoneMixes:
   powerOriginRatios:
     - _source: Electricity Maps, 2020 average
@@ -165,6 +165,12 @@ isLowCarbon:
       value: 0.5657
     - datetime: '2022-01-01'
       value: 0.449
+    - datetime: '2023-01-01'
+      value: 0.2468
+    - datetime: '2024-01-01'
+      value: 0.3118
+    - datetime: '2025-01-01'
+      value: 0.2827
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
@@ -173,6 +179,12 @@ isRenewable:
       value: 0.5657
     - datetime: '2022-01-01'
       value: 0.449
+    - datetime: '2023-01-01'
+      value: 0.2468
+    - datetime: '2024-01-01'
+      value: 0.3118
+    - datetime: '2025-01-01'
+      value: 0.2827
 parsers:
   production: ajenti.fetch_production
 region: Oceania
