--- a/config/zones/AU-VIC.yaml
+++ b/config/zones/AU-VIC.yaml
@@ -106,7 +106,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 411.08
+        value: 410.06
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
@@ -132,7 +132,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 444.08
+        value: 443.06
 fallbackZoneMixes:
   powerOriginRatios:
     - _source: Electricity Maps, 2015 average
@@ -295,6 +295,12 @@ isLowCarbon:
       value: 0.2809
     - datetime: '2022-01-01'
       value: 0.3439
+    - datetime: '2023-01-01'
+      value: 0.4435
+    - datetime: '2024-01-01'
+      value: 0.4085
+    - datetime: '2025-01-01'
+      value: 0.4524
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
@@ -303,6 +309,12 @@ isRenewable:
       value: 0.2809
     - datetime: '2022-01-01'
       value: 0.3439
+    - datetime: '2023-01-01'
+      value: 0.4435
+    - datetime: '2024-01-01'
+      value: 0.4085
+    - datetime: '2025-01-01'
+      value: 0.4524
 parsers:
   consumptionForecast: AEMO.fetch_consumption_forecast
   price: OPENNEM.fetch_price
