--- a/config/zones/AU-WA-RI.yaml
+++ b/config/zones/AU-WA-RI.yaml
@@ -133,6 +133,12 @@ isLowCarbon:
       value: 0.2342
     - datetime: '2022-01-01'
       value: 0.2342
+    - datetime: '2023-01-01'
+      value: 0.25
+    - datetime: '2024-01-01'
+      value: 0.2066
+    - datetime: '2025-01-01'
+      value: 0.2481
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
@@ -141,6 +147,12 @@ isRenewable:
       value: 0.2342
     - datetime: '2022-01-01'
       value: 0.2342
+    - datetime: '2023-01-01'
+      value: 0.25
+    - datetime: '2024-01-01'
+      value: 0.2066
+    - datetime: '2025-01-01'
+      value: 0.2481
 parsers:
   production: ajenti.fetch_production
 region: Oceania
