--- a/config/zones/AU-WA.yaml
+++ b/config/zones/AU-WA.yaml
@@ -266,10 +266,22 @@ isLowCarbon:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.4461
+    - datetime: '2023-01-01'
+      value: 0.465
+    - datetime: '2024-01-01'
+      value: 0.4567
+    - datetime: '2025-01-01'
+      value: 0.5079
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.4461
+    - datetime: '2023-01-01'
+      value: 0.465
+    - datetime: '2024-01-01'
+      value: 0.4567
+    - datetime: '2025-01-01'
+      value: 0.5079
 parsers:
   price: OPENNEM.fetch_price
   production: OPENNEM.fetch_production
