--- a/config/zones/AU.yaml
+++ b/config/zones/AU.yaml
@@ -59,7 +59,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 386.31
+        value: 385.78
     hydro discharge:
       - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
@@ -84,7 +84,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 337.34
+        value: 336.74
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
@@ -110,7 +110,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 419.31
+        value: 418.78
     hydro discharge:
       - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
@@ -135,7 +135,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; IPCC 2014
-        value: 361.34
+        value: 360.74
 fallbackZoneMixes:
   powerOriginRatios:
     - _source: Electricity Maps, 2017 average
@@ -268,6 +268,12 @@ isLowCarbon:
       value: 0.2942
     - datetime: '2022-01-01'
       value: 0.3488
+    - datetime: '2023-01-01'
+      value: 0.447
+    - datetime: '2024-01-01'
+      value: 0.4335
+    - datetime: '2025-01-01'
+      value: 0.4632
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2626
@@ -275,6 +281,12 @@ isLowCarbon:
       value: 0.3367
     - datetime: '2022-01-01'
       value: 0.4042
+    - datetime: '2023-01-01'
+      value: 0.5054
+    - datetime: '2024-01-01'
+      value: 0.4952
+    - datetime: '2025-01-01'
+      value: 0.5326
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
@@ -283,6 +295,12 @@ isRenewable:
       value: 0.2942
     - datetime: '2022-01-01'
       value: 0.3488
+    - datetime: '2023-01-01'
+      value: 0.447
+    - datetime: '2024-01-01'
+      value: 0.4335
+    - datetime: '2025-01-01'
+      value: 0.4632
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2626
@@ -290,6 +308,12 @@ isRenewable:
       value: 0.3367
     - datetime: '2022-01-01'
       value: 0.4042
+    - datetime: '2023-01-01'
+      value: 0.5054
+    - datetime: '2024-01-01'
+      value: 0.4952
+    - datetime: '2025-01-01'
+      value: 0.5326
 region: Oceania
 sources:
   IPCC 2014:
