--- a/config/zones/BA.yaml
+++ b/config/zones/BA.yaml
@@ -80,7 +80,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 316.88
+        value: 421.24
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
@@ -106,7 +106,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
-        value: 327.58
+        value: 431.94
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
@@ -249,12 +249,24 @@ isLowCarbon:
       value: 1.0
     - datetime: '2022-01-01'
       value: 1.0
+    - datetime: '2023-01-01'
+      value: 0.1965
+    - datetime: '2024-01-01'
+      value: 0.4248
+    - datetime: '2025-01-01'
+      value: 0.3669
 isRenewable:
   hydro discharge:
     - datetime: '2021-01-01'
       value: 1.0
     - datetime: '2022-01-01'
       value: 1.0
+    - datetime: '2023-01-01'
+      value: 0.1838
+    - datetime: '2024-01-01'
+      value: 0.3718
+    - datetime: '2025-01-01'
+      value: 0.3669
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
