--- a/config/zones/CA.yaml
+++ b/config/zones/CA.yaml
@@ -170,7 +170,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 92.35
+        value: 92.37
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
@@ -192,7 +192,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 125.35
+        value: 125.37
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
@@ -201,12 +201,24 @@ isLowCarbon:
       value: 0.7917
     - datetime: '2022-01-01'
       value: 0.7982
+    - datetime: '2023-01-01'
+      value: 0.7958
+    - datetime: '2024-01-01'
+      value: 0.7862
+    - datetime: '2025-01-01'
+      value: 0.7738
 isRenewable:
   battery discharge:
     - datetime: '2021-01-01'
       value: 0.6593
     - datetime: '2022-01-01'
       value: 0.6801
+    - datetime: '2023-01-01'
+      value: 0.6714
+    - datetime: '2024-01-01'
+      value: 0.6593
+    - datetime: '2025-01-01'
+      value: 0.6488
 parsers:
   productionCapacity: EMBER.fetch_production_capacity
 region: Americas
