--- a/config/zones/DE.yaml
+++ b/config/zones/DE.yaml
@@ -334,15 +334,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 274.86
+        value: 277.92
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 241.9
+        value: 240.15
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 236.68
+        value: 234.68
     oil:
       - datetime: '2021-01-01'
         source: EU-ETS, ENTSO-E 2021
@@ -409,15 +409,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; UNECE 2022
-        value: 285.56
+        value: 288.62
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
-        value: 252.6
+        value: 250.85
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
-        value: 247.38
+        value: 245.38
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -606,6 +606,12 @@ isLowCarbon:
       value: 0.6219
     - datetime: '2022-01-01'
       value: 0.6031
+    - datetime: '2023-01-01'
+      value: 0.6686
+    - datetime: '2024-01-01'
+      value: 0.701
+    - datetime: '2025-01-01'
+      value: 0.7014
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
@@ -614,6 +620,12 @@ isRenewable:
       value: 0.4794
     - datetime: '2022-01-01'
       value: 0.5294
+    - datetime: '2023-01-01'
+      value: 0.6292
+    - datetime: '2024-01-01'
+      value: 0.6621
+    - datetime: '2025-01-01'
+      value: 0.6697
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
