--- a/config/zones/ES-CE.yaml
+++ b/config/zones/ES-CE.yaml
@@ -153,6 +153,12 @@ isLowCarbon:
       value: 0.0
     - datetime: '2022-01-01'
       value: 0.0
+    - datetime: '2023-01-01'
+      value: 0.0
+    - datetime: '2024-01-01'
+      value: 0.0
+    - datetime: '2025-01-01'
+      value: 0.0
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
@@ -167,6 +173,12 @@ isRenewable:
     - datetime: '2021-01-01'
       value: 0.0
     - datetime: '2022-01-01'
+      value: 0.0
+    - datetime: '2023-01-01'
+      value: 0.0
+    - datetime: '2024-01-01'
+      value: 0.0
+    - datetime: '2025-01-01'
       value: 0.0
   hydro discharge:
     - datetime: '2020-01-01'
