--- a/config/zones/ES-ML.yaml
+++ b/config/zones/ES-ML.yaml
@@ -139,6 +139,12 @@ isLowCarbon:
       value: 0.0602
     - datetime: '2022-01-01'
       value: 0.0759
+    - datetime: '2023-01-01'
+      value: 0.0709
+    - datetime: '2024-01-01'
+      value: 0.0735
+    - datetime: '2025-01-01'
+      value: 0.0784
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
@@ -147,6 +153,12 @@ isRenewable:
       value: 0.0602
     - datetime: '2022-01-01'
       value: 0.0759
+    - datetime: '2023-01-01'
+      value: 0.0709
+    - datetime: '2024-01-01'
+      value: 0.0735
+    - datetime: '2025-01-01'
+      value: 0.0784
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
