--- a/config/zones/GB.yaml
+++ b/config/zones/GB.yaml
@@ -215,7 +215,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 114.46
+        value: 114.5
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
@@ -245,7 +245,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
-        value: 125.16
+        value: 125.2
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
@@ -425,6 +425,12 @@ isLowCarbon:
       value: 0.5777
     - datetime: '2022-01-01'
       value: 0.5787
+    - datetime: '2023-01-01'
+      value: 0.6459
+    - datetime: '2024-01-01'
+      value: 0.7064
+    - datetime: '2025-01-01'
+      value: 0.6884
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
@@ -433,6 +439,12 @@ isRenewable:
       value: 0.3753
     - datetime: '2022-01-01'
       value: 0.4125
+    - datetime: '2023-01-01'
+      value: 0.4636
+    - datetime: '2024-01-01'
+      value: 0.512
+    - datetime: '2025-01-01'
+      value: 0.5146
 parsers:
   consumption: ELEXON.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
