--- a/config/zones/IT-SAR.yaml
+++ b/config/zones/IT-SAR.yaml
@@ -78,11 +78,11 @@ emissionFactors:
       - _comment: used non-null storage values
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 426.4
+        value: 408.3
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 394.58
+        value: 390.35
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -129,15 +129,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 438.32
+        value: 433.78
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 428.79
+        value: 431.57
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 393.88
+        value: 388.4
     oil:
       - datetime: '2021-01-01'
         source: EU-ETS, ENTSO-E 2021
@@ -156,11 +156,11 @@ emissionFactors:
       - _comment: used non-null storage values
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; National Laboratory of the Rockies
-        value: 459.4
+        value: 441.3
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 427.58
+        value: 423.35
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
@@ -213,15 +213,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; UNECE 2022
-        value: 449.02
+        value: 444.48
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
-        value: 439.49
+        value: 442.27
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
-        value: 404.58
+        value: 399.1
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -403,6 +403,11 @@ fallbackZoneMixes:
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
+  battery discharge:
+    - datetime: '2024-01-01'
+      value: 0.1984
+    - datetime: '2025-01-01'
+      value: 0.3846
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.262
@@ -410,7 +415,18 @@ isLowCarbon:
       value: 0.3002
     - datetime: '2022-01-01'
       value: 0.3068
+    - datetime: '2023-01-01'
+      value: 0.3636
+    - datetime: '2024-01-01'
+      value: 0.3411
+    - datetime: '2025-01-01'
+      value: 0.3733
 isRenewable:
+  battery discharge:
+    - datetime: '2024-01-01'
+      value: 0.1983
+    - datetime: '2025-01-01'
+      value: 0.3838
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2619
@@ -418,6 +434,12 @@ isRenewable:
       value: 0.2995
     - datetime: '2022-01-01'
       value: 0.3065
+    - datetime: '2023-01-01'
+      value: 0.3626
+    - datetime: '2024-01-01'
+      value: 0.3397
+    - datetime: '2025-01-01'
+      value: 0.3727
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
