--- a/config/zones/JP.yaml
+++ b/config/zones/JP.yaml
@@ -194,11 +194,19 @@ isLowCarbon:
       value: 1.0
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2023-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
+      value: 1.0
+    - datetime: '2023-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
       value: 1.0
 region: Asia
 sources:
