--- a/config/zones/PH-MI.yaml
+++ b/config/zones/PH-MI.yaml
@@ -209,6 +209,12 @@ isLowCarbon:
       value: 0.3392
     - datetime: '2022-01-01'
       value: 0.3392
+    - datetime: '2023-01-01'
+      value: 0.3713
+    - datetime: '2024-01-01'
+      value: 0.3317
+    - datetime: '2025-01-01'
+      value: 0.367
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
@@ -217,6 +223,12 @@ isRenewable:
       value: 0.3392
     - datetime: '2022-01-01'
       value: 0.3392
+    - datetime: '2023-01-01'
+      value: 0.3713
+    - datetime: '2024-01-01'
+      value: 0.3317
+    - datetime: '2025-01-01'
+      value: 0.367
 parsers:
   production: IEMOP.fetch_production
 region: Asia
