--- a/config/zones/PH-VI.yaml
+++ b/config/zones/PH-VI.yaml
@@ -210,6 +210,12 @@ isLowCarbon:
       value: 0.298
     - datetime: '2022-01-01'
       value: 0.2981
+    - datetime: '2023-01-01'
+      value: 0.2533
+    - datetime: '2024-01-01'
+      value: 0.2606
+    - datetime: '2025-01-01'
+      value: 0.2763
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
@@ -218,6 +224,12 @@ isRenewable:
       value: 0.298
     - datetime: '2022-01-01'
       value: 0.2981
+    - datetime: '2023-01-01'
+      value: 0.2533
+    - datetime: '2024-01-01'
+      value: 0.2606
+    - datetime: '2025-01-01'
+      value: 0.2763
 parsers:
   production: IEMOP.fetch_production
 region: Asia
