--- a/config/zones/RE.yaml
+++ b/config/zones/RE.yaml
@@ -257,12 +257,30 @@ isLowCarbon:
       value: 0.1048
     - datetime: '2022-01-01'
       value: 0.157
+    - datetime: '2023-01-01'
+      value: 0.3501
+    - datetime: '2024-01-01'
+      value: 0.4024
+    - datetime: '2025-01-01'
+      value: 0.8668
+  hydro discharge:
+    - datetime: '2025-01-01'
+      value: 1.0
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.1048
     - datetime: '2022-01-01'
       value: 0.157
+    - datetime: '2023-01-01'
+      value: 0.3501
+    - datetime: '2024-01-01'
+      value: 0.4024
+    - datetime: '2025-01-01'
+      value: 0.8668
+  hydro discharge:
+    - datetime: '2025-01-01'
+      value: 1.0
 parsers:
   price: FR_O.fetch_price
   production: FR_O.fetch_production
