--- a/config/zones/RS.yaml
+++ b/config/zones/RS.yaml
@@ -177,11 +177,11 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 453.97
+        value: 453.96
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 483.26
+        value: 474.61
   lifecycle:
     hydro:
       datetime: '2020-01-01'
@@ -207,11 +207,11 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
-        value: 464.67
+        value: 464.66
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
-        value: 493.96
+        value: 485.31
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -352,6 +352,12 @@ isLowCarbon:
       value: 1.0
     - datetime: '2022-01-01'
       value: 0.2838
+    - datetime: '2023-01-01'
+      value: 0.3901
+    - datetime: '2024-01-01'
+      value: 0.369
+    - datetime: '2025-01-01'
+      value: 0.3413
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
@@ -360,6 +366,12 @@ isRenewable:
       value: 1.0
     - datetime: '2022-01-01'
       value: 0.2144
+    - datetime: '2023-01-01'
+      value: 0.3771
+    - datetime: '2024-01-01'
+      value: 0.3456
+    - datetime: '2025-01-01'
+      value: 0.2789
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
