--- a/config/zones/SI.yaml
+++ b/config/zones/SI.yaml
@@ -209,7 +209,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 281.03
+        value: 278.23
       - _comment: used default IPCC 2014 value of 0.0
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
@@ -284,7 +284,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; UNECE 2022
-        value: 291.73
+        value: 288.93
       - _comment: used default IPCC 2014 value of 24.0
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
@@ -481,6 +481,12 @@ isLowCarbon:
       value: 1.0
     - datetime: '2022-01-01'
       value: 1.0
+    - datetime: '2023-01-01'
+      value: 0.653
+    - datetime: '2024-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
@@ -488,6 +494,12 @@ isRenewable:
     - datetime: '2021-01-01'
       value: 1.0
     - datetime: '2022-01-01'
+      value: 1.0
+    - datetime: '2023-01-01'
+      value: 0.2829
+    - datetime: '2024-01-01'
+      value: 1.0
+    - datetime: '2025-01-01'
       value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
