--- a/config/zones/SK.yaml
+++ b/config/zones/SK.yaml
@@ -172,15 +172,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 193.78
+        value: 222.91
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 147.17
+        value: 156.29
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 165.93
+        value: 165.69
     oil:
       - datetime: '2021-01-01'
         source: EU-ETS, ENTSO-E 2021
@@ -247,15 +247,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; UNECE 2022
-        value: 204.48
+        value: 233.61
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
-        value: 157.87
+        value: 166.99
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
-        value: 176.63
+        value: 176.39
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -444,6 +444,12 @@ isLowCarbon:
       value: 0.6272
     - datetime: '2022-01-01'
       value: 0.6498
+    - datetime: '2023-01-01'
+      value: 0.7594
+    - datetime: '2024-01-01'
+      value: 0.7519
+    - datetime: '2025-01-01'
+      value: 0.7336
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
@@ -452,6 +458,12 @@ isRenewable:
       value: 0.168
     - datetime: '2022-01-01'
       value: 0.1736
+    - datetime: '2023-01-01'
+      value: 0.2056
+    - datetime: '2024-01-01'
+      value: 0.2267
+    - datetime: '2025-01-01'
+      value: 0.1906
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
