--- a/config/zones/US-CAL-IID.yaml
+++ b/config/zones/US-CAL-IID.yaml
@@ -147,7 +147,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 99.04
+        value: 99.06
     biomass:
       - datetime: '2020-01-01'
         source: BEIS 2021
@@ -212,7 +212,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 86.52
+        value: 86.59
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -235,7 +235,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 132.04
+        value: 132.06
     biomass:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -304,7 +304,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; IPCC 2014
-        value: 110.52
+        value: 110.59
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -480,6 +480,24 @@ fallbackZoneMixes:
         wind: 0.0053857770760136646
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2025-01-01'
+      value: 0.8279
+  hydro discharge:
+    - datetime: '2024-01-01'
+      value: 0.486
+    - datetime: '2025-01-01'
+      value: 0.9414
+isRenewable:
+  battery discharge:
+    - datetime: '2025-01-01'
+      value: 0.8252
+  hydro discharge:
+    - datetime: '2024-01-01'
+      value: 0.486
+    - datetime: '2025-01-01'
+      value: 0.9378
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
@@ -487,12 +505,12 @@ parsers:
   productionCapacity: EIA.fetch_production_capacity
 region: Americas
 sources:
-  National Laboratory of the Rockies:
-    link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
   INCER ACV:
     link: https://docs.google.com/spreadsheets/d/1w5DJ7sPen6axIHU8TCVcuzNCjlct4I6JAbhUlw-ZXu8/edit?usp=sharing
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
+  National Laboratory of the Rockies:
+    link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
   eGrid 2020:
     link: https://drive.google.com/file/d/1_FAAuTtIdMuORZKsqHnd9vMNHlQgYarh/view?usp=sharing
   eGrid 2021:
