--- a/config/zones/US-CAR-CPLW.yaml
+++ b/config/zones/US-CAR-CPLW.yaml
@@ -166,15 +166,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 449.0
+        value: 452.17
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 404.87
+        value: 407.45
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 435.05
+        value: 437.82
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -280,15 +280,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; IPCC 2014
-        value: 473.0
+        value: 476.17
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; IPCC 2014
-        value: 428.87
+        value: 431.45
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; IPCC 2014
-        value: 459.05
+        value: 461.82
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -472,6 +472,12 @@ isLowCarbon:
       value: 0.0952
     - datetime: '2022-01-01'
       value: 0.1405
+    - datetime: '2023-01-01'
+      value: 0.0067
+    - datetime: '2024-01-01'
+      value: 0.1671
+    - datetime: '2025-01-01'
+      value: 0.1069
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
@@ -480,6 +486,12 @@ isRenewable:
       value: 0.0154
     - datetime: '2022-01-01'
       value: 0.0135
+    - datetime: '2023-01-01'
+      value: 0.0009
+    - datetime: '2024-01-01'
+      value: 0.0616
+    - datetime: '2025-01-01'
+      value: 0.0161
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
