--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -867,15 +867,15 @@ emissionFactors:
       - _comment: used non-null storage values
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 204.17
+        value: 204.26
       - _comment: used non-null storage values
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 214.78
+        value: 214.87
       - _comment: used non-null storage values
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 223.34
+        value: 223.57
     biomass:
       - datetime: '2020-01-01'
         source: BEIS 2021
@@ -962,15 +962,15 @@ emissionFactors:
       - _comment: used non-null storage values
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; National Laboratory of the Rockies
-        value: 237.17
+        value: 237.26
       - _comment: used non-null storage values
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; National Laboratory of the Rockies
-        value: 247.78
+        value: 247.87
       - _comment: used non-null storage values
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 256.34
+        value: 256.57
     biomass:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -1210,6 +1210,12 @@ isLowCarbon:
       value: 0.5179
     - datetime: '2022-01-01'
       value: 0.5136
+    - datetime: '2023-01-01'
+      value: 0.4845
+    - datetime: '2024-01-01'
+      value: 0.4567
+    - datetime: '2025-01-01'
+      value: 0.4474
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
@@ -1218,6 +1224,12 @@ isRenewable:
       value: 0.2755
     - datetime: '2022-01-01'
       value: 0.2718
+    - datetime: '2023-01-01'
+      value: 0.2651
+    - datetime: '2024-01-01'
+      value: 0.2145
+    - datetime: '2025-01-01'
+      value: 0.1969
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: US_NEISO.fetch_consumption_forecast
