--- a/config/zones/US-NW-AVA.yaml
+++ b/config/zones/US-NW-AVA.yaml
@@ -156,7 +156,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 183.93
+        value: 184.06
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -243,7 +243,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; IPCC 2014
-        value: 207.93
+        value: 208.06
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -400,6 +400,14 @@ fallbackZoneMixes:
         wind: 0.1020901076480728
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2025-01-01'
+      value: 0.6535
+isRenewable:
+  hydro discharge:
+    - datetime: '2025-01-01'
+      value: 0.6224
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
