--- a/config/zones/US-NW-WACM.yaml
+++ b/config/zones/US-NW-WACM.yaml
@@ -604,6 +604,14 @@ fallbackZoneMixes:
         wind: 0.1680123086368647
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2025-01-01'
+      value: 0.3325
+isRenewable:
+  hydro discharge:
+    - datetime: '2025-01-01'
+      value: 0.3325
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
