--- a/config/zones/US-SW-PNM.yaml
+++ b/config/zones/US-SW-PNM.yaml
@@ -262,15 +262,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 350.94
+        value: 351.27
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 281.11
+        value: 281.32
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 185.62
+        value: 185.79
     biomass:
       - datetime: '2020-01-01'
         source: BEIS 2021
@@ -336,11 +336,11 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 356.66
+        value: 356.98
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 161.54
+        value: 161.72
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -363,15 +363,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; National Laboratory of the Rockies
-        value: 383.94
+        value: 384.27
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; National Laboratory of the Rockies
-        value: 314.11
+        value: 314.32
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 218.62
+        value: 218.79
     biomass:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -441,11 +441,11 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; IPCC 2014
-        value: 380.66
+        value: 380.98
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; IPCC 2014
-        value: 185.54
+        value: 185.72
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -607,13 +607,35 @@ fallbackZoneMixes:
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
+  battery discharge:
+    - datetime: '2023-01-01'
+      value: 0.4919
+    - datetime: '2024-01-01'
+      value: 0.5511
+    - datetime: '2025-01-01'
+      value: 0.7346
   hydro discharge:
     - datetime: '2022-01-01'
       value: 0.276
+    - datetime: '2023-01-01'
+      value: 0.4728
+    - datetime: '2024-01-01'
+      value: 0.7807
 isRenewable:
+  battery discharge:
+    - datetime: '2023-01-01'
+      value: 0.4825
+    - datetime: '2024-01-01'
+      value: 0.5288
+    - datetime: '2025-01-01'
+      value: 0.7217
   hydro discharge:
     - datetime: '2022-01-01'
       value: 0.2628
+    - datetime: '2023-01-01'
+      value: 0.464
+    - datetime: '2024-01-01'
+      value: 0.7806
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
