--- a/config/zones/US-TEN-TVA.yaml
+++ b/config/zones/US-TEN-TVA.yaml
@@ -276,11 +276,11 @@ emissionFactors:
       - _comment: used non-null storage values
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 366.24
+        value: 367.24
       - _comment: used non-null storage values
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 342.17
+        value: 342.92
     biomass:
       - datetime: '2020-01-01'
         source: BEIS 2021
@@ -353,15 +353,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 325.56
+        value: 326.29
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 365.26
+        value: 366.24
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 341.53
+        value: 342.28
     oil:
       - datetime: '2020-01-01'
         source: eGrid 2020
@@ -383,11 +383,11 @@ emissionFactors:
       - _comment: used non-null storage values
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; National Laboratory of the Rockies
-        value: 399.24
+        value: 400.24
       - _comment: used non-null storage values
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 375.17
+        value: 375.92
     biomass:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -464,15 +464,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; IPCC 2014
-        value: 349.56
+        value: 350.29
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; IPCC 2014
-        value: 389.26
+        value: 390.24
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; IPCC 2014
-        value: 365.53
+        value: 366.28
     oil:
       - datetime: '2020-01-01'
         source: eGrid 2020; IPCC 2014
@@ -633,6 +633,11 @@ fallbackZoneMixes:
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
+  battery discharge:
+    - datetime: '2024-01-01'
+      value: 0.3954
+    - datetime: '2025-01-01'
+      value: 0.4818
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
@@ -640,7 +645,18 @@ isLowCarbon:
       value: 0.5012
     - datetime: '2022-01-01'
       value: 0.4541
+    - datetime: '2023-01-01'
+      value: 0.5081
+    - datetime: '2024-01-01'
+      value: 0.4013
+    - datetime: '2025-01-01'
+      value: 0.4849
 isRenewable:
+  battery discharge:
+    - datetime: '2024-01-01'
+      value: 0.0536
+    - datetime: '2025-01-01'
+      value: 0.1245
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
@@ -648,6 +664,12 @@ isRenewable:
       value: 0.0288
     - datetime: '2022-01-01'
       value: 0.0267
+    - datetime: '2023-01-01'
+      value: 0.0212
+    - datetime: '2024-01-01'
+      value: 0.0503
+    - datetime: '2025-01-01'
+      value: 0.1143
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
