--- a/config/zones/ZA.yaml
+++ b/config/zones/ZA.yaml
@@ -129,7 +129,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 644.62
+        value: 644.38
   lifecycle:
     hydro discharge:
       - _comment: used storage values greater than zero.
@@ -155,7 +155,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; IPCC 2014
-        value: 668.62
+        value: 668.38
 fallbackZoneMixes:
   powerOriginRatios:
     - _source: Electricity Maps, 2015 average
@@ -318,6 +318,12 @@ isLowCarbon:
       value: 0.1472
     - datetime: '2022-01-01'
       value: 0.1504
+    - datetime: '2023-01-01'
+      value: 0.1532
+    - datetime: '2024-01-01'
+      value: 0.1281
+    - datetime: '2025-01-01'
+      value: 0.1465
   unknown:
     value: 1
 isRenewable:
@@ -328,6 +334,12 @@ isRenewable:
       value: 0.0932
     - datetime: '2022-01-01'
       value: 0.1039
+    - datetime: '2023-01-01'
+      value: 0.1136
+    - datetime: '2024-01-01'
+      value: 0.0878
+    - datetime: '2025-01-01'
+      value: 0.0923
   unknown:
     value: 1
 parsers:
